# architecture_and_design_patterns

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/hooks/: pre-commit.sh
.github/workflows/: main.yml
docs/: general.md
docs/clean_architecture/: domain_model.drawio
docs/clean_architecture/abstraction/: general.md
docs/clean_architecture/advanced_typing/: advanced_typing.md
docs/clean_architecture/features/: features.md
docs/clean_architecture/ports_adapters/: ports_adapters.md
docs/clean_architecture/pydantic_dataclass/: pydantic_dataclass.md
docs/creational/: factory.md
docs/pytest/: pytest.md
src/: main.py
src/application/product/: factories.py  services.py
src/application/shop/: services.py
src/clean_architecture/: exceptions.py  model.py  orm.py
src/ddd/bounded_context/: container.py
src/ddd/bounded_context/builders/: factory.py  house_builders.py  interface.py
src/ddd/bounded_context/directors/: house_director.py  interface.py
src/ddd/bounded_context/entities/: house.py
src/ddd/bounded_context/factories/: house_factories.py  interface.py
src/domain/: product.py
src/entities/: client.py
src/patterns/creational/: factory.py
src/pytest/: conftest.py  main.py  setup.cfg
src/pytest/unittests/: conftest.py  test_main.py
tests/clean_architecture/: test_allocation.py  test_batches.py  test_orm.py
tests/creational/: test_factory.py
