[tool.poetry]
name = "architecture"
version = "0.1.0"
description = ""
authors = ["emurze <grayemurze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
mypy = "^1.7.1"
black = "^23.12.0"
flake8 = "^6.1.0"
coverage = "^7.3.3"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
