[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = ""
authors = ["emurze <grayemurze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.8.0"
black = "^23.12.1"
pytest = "^7.4.3"
flake8 = "^6.1.0"
coverage = "^7.3.4"
pydantic = "^2.5.3"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
